# fft-tn-quadp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  install_extern.sh  run_test.sh
include/: fft_tn.hpp  magic_tensor_qft.hpp  parser_precompute_mpo_qft.hpp
src/: plot_precompute_qft.py  precompute_qft.cpp
test/: .gitignore  gE<_site[[1, 0], [0, 0]].tt  gE<_site[[1, 0], [0, 0]]_f_values.json  gE<_site[[1, 0], [0, 0]]_grid.json  gE<_site[[1, 0], [0, 0]]_grid_E.json  plot_errors_qft_mpo.py  test_fft_vanilla.cpp  test_magic_qft_mpo.cpp
test/output_compress/: .gitignore
